Add informations and link packagejson to git repository

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "@txtony/tx-vue-scanner",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TxTony/tx-vue-scanner"
+  },
   "version": "0.1.1",
   "keywords":["barcode","qrCode","scanner","vue","vue-component","vue-barcode","vue-qrCode-scanner","js"],
   "private": false,
